[tool.poetry]
name = "detection_datasets"
version = "0.2.1"
description = "Easily convert datasets between different formats for object detection"
authors = ["Jerome Blin <blinjrm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/blinjrm/detection-dataset"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "detection_datasets", from = "src" }]

[tool.poetry.dependencies]
python = "^3.8"
datasets = { extras = ["vision"], version = "^2.4.0" }
"ruamel.yaml" = "^0.17.21"
joblib = "^1.1.0"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"
flake8 = "^4.0.1"
pre-commit = "^2.18.1"
mypy = "^0.950"
pytest-cov = "^3.0.0"
jupyterlab = "^3.4.0"
mkdocs-material = "^8.3.9"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs-section-index = "^0.3.4"
ipywidgets = "^7.7.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line_length = 120
target-version = ['py38']
