[tool.poetry]
name = "detection_datasets"
version = "0.3.2"
description = "Easily load and transform datasets for object detection"
authors = ["Jerome Blin <blinjrm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/blinjrm/detection-dataset"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "detection_datasets", from = "src" }]

[tool.poetry.dependencies]
python = "^3.7.1"

pandas = "^1.3.0"
datasets = { extras = ["vision"], version = "^2.4.0" }

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^3.4.7"
ipywidgets = "^8.0.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^22.8.0"
isort = "^5.10.1"
pre-commit = "^2.20.0"
mypy = "^0.971"
pytest-cov = "^3.0.0"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.5.3"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs-section-index = "^0.3.4"
mkdocs-jupyter = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
line_length = 120

[tool.black]
line_length = 120
target-version = ['py37']
