[tool.poetry]
name = "detection_datasets"
version = "0.3.3"
description = "Easily load and transform datasets for object detection"
authors = ["Jerome Blin <blinjrm@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/blinjrm/detection-dataset"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
packages = [{ include = "detection_datasets", from = "src" }]

[tool.poetry.dependencies]
python = "^3.7.1"

pandas = "^1.3.0"
datasets = { extras = ["vision"], version = "^2.4.0" }

[tool.poetry.group.jupyter]
optional = true

[tool.poetry.group.jupyter.dependencies]
jupyterlab = "^3.4.7"
ipywidgets = "^8.0.2"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
black = "^22.8.0"
pre-commit = "^2.20.0"
mypy = "^0.971"
pytest-cov = "^3.0.0"
ruff = "^0.0.120"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^8.5.3"
mkdocstrings = { extras = ["python"], version = "^0.19.0" }
mkdocs-section-index = "^0.3.4"
mkdocs-jupyter = "^0.21.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line_length = 120
target-version = ['py37']

[tool.ruff]
line-length = 120
src = ['src']
target-version = "py37"
select = [
    'A', # flake8-builtins
    # "ANN", # flake8-annotations
    'B', # flake8-bugbear
    'C', # flake8-comprehensions
    'D', # pydocstyle
    "E", # pycodestyle errors
    "F", # pyflakes
    'I', # isort
    'M',
    'N', # pep8-naming
    'Q', # flake8-quotes
    'S', # flake8-bandit
    'T', # flake8-print
    'U', # pyupgrade
    "W", # pycodestyle warnings
]
extend-ignore = [
    'A003',
    'ANN101',
    'D100',
    'D101',
    'D102',
    'D105',
    'D107',
    'D202',
    "D203",
    "D204",
    "D213",
    "D215",
    "D400",
    "D404",
    "D406",
    "D407",
    "D408",
    "D409",
    "D413",
    'F401',
    'S101',
    'T201',
]
